packages/server/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: api-tongdelove-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
    rules:
        - host: api.tongdelove.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: backendui-svc
                            port:
                                number: 80
        - host: api.tongdelove.com
          http:
              paths:
                  - path: /sys-api/
                    pathType: Prefix
                    backend:
                        service:
                            name: coreapi-svc
                            port:
                                number: 9100
